<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp" >

            <TableRow
                android:layout_width="400dp"
                android:layout_height="100dp">

            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:autoSizeTextType="uniform">


                <TextView
                    android:id="@+id/textViewTextQuestion"
                    android:layout_width="296dp"
                    android:layout_height="103dp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/txtQuestion"
                    android:textSize="6sp" />
            </TableRow>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:text="@string/buttonOne" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:text="@string/buttonTwo" />

            </TableRow>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:text="@string/buttonThree" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:text="@string/buttonFour" />

            </TableRow>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
