<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#4CAF50"
    tools:context=".MainActivity3">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TableRow
                android:layout_width="400dp"
                android:layout_height="100dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <EditText
                    android:id="@+id/editTextNameEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/txtNameEnd" />

                <TextView
                    android:id="@+id/textViewRemarks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="70dp"
                    android:text="@string/txtEndRemarks"
                    android:textAlignment="center" />
            </TableRow>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <EditText
                    android:id="@+id/editTextScore"
                    android:layout_width="400dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/txtScore" />

            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <Button
                    android:id="@+id/buttonRestart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="160dp"
                    android:backgroundTint="#4CAF50"
                    android:text="@string/buttonRestart" />
            </TableRow>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>